# movie-bo-mena

./: .env.example  .gitignore  README.md  app.py  code.gs  filmyard_debug.html  pyproject.toml  requirements.txt  ui_helpers.py
.github/workflows/: daily-ingestion.yml  weekly-ingestion.yml
.streamlit/: secrets.toml.example
Model/: fill_marketing_data.py  film_prediction_model.pkl  marketing_model_dataset.csv  marketing_model_dataset_filled.csv  model_api.py  predict.py  roi.py  train_model.py
config/: ticket_prices.json
migrations/: 001_init_schema.sql  002_seed_sources.sql  003_dedupe_and_admissions.sql  004_lookup_jobs.sql  005_normalized_reconciled_admissions_columns.sql  006_bulk_lookup_queue.sql  007_film_performance_features.sql  008_intelligence_engine_fpf.sql  009_film_investment_analysis.sql  supabase_paste_dedupe_admissions.sql
pages/: 01_Film_Report.py  02_Live_Fetch.py  03_Source_Explorer.py  04_Review_Queue.py  05_Data_Admin.py  06_Marketing_Inputs.py  07_Bulk_Lookup.py  08_Ratings_Lookup.py  09_Release_Intelligence.py  10_Film_Evaluation.py  11_Film_Performance_Input.py
scripts/: _probe_elcinema_old_week.py  bootstrap_db.py  cleanup_bom_ae_mislabeled_releases.py  repair_usd_admissions_estimates.py  seed_demo_data.py  selftest_product_gaps.py  validate_parsers.py  verify_elcinema_backfill.py
src/: __init__.py  cli.py  config.py  db.py  models.py  schema_types.py
src/repositories/: __init__.py  film_repository.py  (+2 more)
tests/: test_acquisition_lookup_flow.py  test_lookup_job_json_safety.py  test_product_gaps.py  test_resolved_candidate_scoring.py
(+51 files in other folders)
