[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mena-boxoffice-intelligence"
version = "0.1.0"
description = "MENA Box Office Intelligence + Marketing Score App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.33.0",
  "sqlalchemy>=2.0.28",
  "psycopg[binary]>=3.1.18",
  "pydantic>=2.6.4",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.1",
  "python-dateutil>=2.9.0.post0",
  "rapidfuzz>=3.8.1",
  "typer>=0.12.3",
  "tenacity>=8.2.3",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "joblib>=1.3.0",
  "altair>=5.0.0",
  "matplotlib>=3.8.0",
  "openpyxl>=3.1.5",
  "reportlab>=4.4.10",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.2",
  "pytest>=8.1.1",
]

[project.scripts]
mbi = "src.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

